feat: Phase 5 - Price Estimation Package
- Add @solar/pricing package with aggregator and ML predictor
- Add /api/price/estimate endpoint
- Add PriceDisplay UI components
- Add PriceCoefficient and PriceEstimate database models
- Berlin Alexanderplatz coefficients (6500 €/m² base)
- Building type, levels, proximity factors
- Confidence scoring and caching

Stage A: Aggregation (complete)
Stage B: ML (placeholder ready)

--- a/apps/map-core/package.json
+++ b/apps/map-core/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@solar/db": "workspace:*",
     "@solar/geo": "workspace:*",
+    "@solar/pricing": "workspace:*",
     "mapbox-gl": "^3.4.0",
     "next": "14.2.0",
     "react": "^18.2.0",
