--- a/apps/map-core/package.json
+++ b/apps/map-core/package.json
@@ -23,5 +23,6 @@
     "@types/react-dom": "^18.2.0",
     "@types/geojson": "^7946.0.14",
     "typescript": "^5.4.0"
-  }
+  },
+  "packageManager": "pnpm@8.15.0"
 }
