--- a/apps/listing-portal/package.json
+++ b/apps/listing-portal/package.json
@@ -19,5 +19,6 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "typescript": "^5.4.0"
-  }
+  },
+  "packageManager": "pnpm@8.15.0"
 }
