--- a/apps/listing-portal/package.json
+++ b/apps/listing-portal/package.json
@@ -2,11 +2,13 @@
   "name": "@solar/listing-portal",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@8.15.0",
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "pnpm prisma generate --schema=../../packages/db/prisma/schema.prisma"
   },
   "dependencies": {
     "@solar/db": "workspace:*",
@@ -18,7 +20,7 @@
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "typescript": "^5.4.0"
-  },
-  "packageManager": "pnpm@8.15.0"
+    "typescript": "^5.4.0",
+    "prisma": "^5.22.0"
+  }
 }
