--- a/apps/map-core/package.json
+++ b/apps/map-core/package.json
@@ -20,11 +20,14 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/geojson": "^7946.0.14",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
-    "@types/geojson": "^7946.0.14",
-    "typescript": "^5.4.0",
-    "prisma": "^5.22.0"
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.31",
+    "prisma": "^5.22.0",
+    "tailwindcss": "3.4.0",
+    "typescript": "^5.4.0"
   }
 }
