feat: Phase 6 Florida - Sarasota 300 buildings imported

--- a/packages/pricing/package.json
+++ b/packages/pricing/package.json
@@ -12,7 +12,8 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@solar/db": "workspace:*"
+    "@solar/db": "workspace:*",
+    "@solar/config": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
