--- a/apps/map-core/package.json
+++ b/apps/map-core/package.json
@@ -17,7 +17,8 @@
     "mapbox-gl": "^3.4.0",
     "next": "14.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@solar/config": "workspace:*"
   },
   "devDependencies": {
     "@types/geojson": "^7946.0.14",
